[package]
name = "zeep"
version = "0.1.3"
authors = ["mibes <mibes@avaya.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.14.1"
log = "0.4.14"
log4rs = "1.0.0"
Inflector = "0.11.4"
yaserde = "0.7.1"
yaserde_derive = "0.7.1"
clap = "2.33.3"
xml-rs = "0.8.4"
reqwest = { version = "0.11.4", features = ["blocking"] }
tokio = { version = "1.9.0", features = ["full"] }
async-trait = "0.1.51"
zeep-lib = { path = "../zeep-lib"}
